# gotham

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/gotham/: __init__.py  config.py  utils.py
src/gotham/api/: app.py  responses.py
src/gotham/api/routes/: crimes.py
src/gotham/core/: crud.py  models.py
src/gotham/db/: database.py
src/gotham/db/migrations/: 001_initial_schema.sql
src/gotham/services/: crime_service.py
src/gotham/sql/crimes/: delete.sql  insert.sql  select_all.sql  select_by_id.sql  update.sql
